fix background of the wrong color for temp users

--- a/src/app/core/components/skill-activity-tabs/skill-activity-tabs.component.scss
+++ b/src/app/core/components/skill-activity-tabs/skill-activity-tabs.component.scss
@@ -1,6 +1,6 @@
 @import 'src/colors.scss';
 $bk-secondary: #3B73B4;
-$border-radius: .5rem;
+$border-radius: .9rem;
 
 :host {
   display: block;
@@ -12,6 +12,10 @@ $border-radius: .5rem;
     padding: 0;
     background-color: $base-bk-color;
     border-radius: 0;
+
+    &.dark {
+      background-color: #4E4E4E;
+    }
 
     &.ui-tabview-top .ui-tabview-nav li:focus {
       box-shadow: none;
@@ -121,6 +125,10 @@ $border-radius: .5rem;
             border-left: 0.6667rem solid transparent;
             border-right: 0.6667rem solid transparent;
             border-top: 0.4167rem solid $base-bk-color;
+
+            &.dark {
+              border-top: 0.4167rem solid  #4E4E4E;
+            }
           }
 
           &:hover {
